# sistemas-operacionais-embarcados

./: README.md
TCG_ID/codigo-fonte/: CMakeLists.txt  Decks.txt  MAKEFILE  how_to_compile.txt  how_to_compile2.txt  picameracv.cpp  test2  test2.cpp  test3  test3.cpp  test4  test4.cpp  teste  teste.cpp  ui1  ui1.cpp
TCG_ID/codigo-fonte/UI/: AllCards.txt  Decks.txt  Ui_teste.glade~  col3.txt  col7.txt  compile.sh  how_to_compile.txt  howtocompile.txt  names.txt  names2.txt  ui  ui_teste.cpp
TCG_ID/codigo-fonte/UI/definitivo/: ui
